--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -45,7 +45,7 @@
      </widget>
     </item>
     <item row="0" column="5" alignment="Qt::AlignRight">
-     <widget class="QRadioButton" name="radioButton_2">
+     <widget class="QRadioButton" name="radioAll">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -58,7 +58,7 @@
      </widget>
     </item>
     <item row="0" column="6">
-     <widget class="QRadioButton" name="radioButton">
+     <widget class="QRadioButton" name="radioAny">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -67,6 +67,9 @@
       </property>
       <property name="text">
        <string>Any</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
