removed boost filesystem

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -95,6 +95,9 @@
           <property name="resizeMode">
            <enum>QListView::Adjust</enum>
           </property>
+          <property name="uniformItemSizes">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
        </layout>
