--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -146,6 +146,9 @@
     </item>
     <item row="1" column="1" rowspan="2" colspan="3">
      <widget class="QListView" name="listView">
+      <property name="inputMethodHints">
+       <set>Qt::ImhNone</set>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::ContiguousSelection</enum>
       </property>
@@ -157,6 +160,9 @@
       </property>
       <property name="resizeMode">
        <enum>QListView::Adjust</enum>
+      </property>
+      <property name="viewMode">
+       <enum>QListView::ListMode</enum>
       </property>
      </widget>
     </item>
