added VidsModel and fixed issue with pics disappearing when double clicking on vids list due to edit trigger set on vids list

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -149,6 +149,9 @@
       <property name="inputMethodHints">
        <set>Qt::ImhNone</set>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::ContiguousSelection</enum>
       </property>
